# firstaide

./: .gitignore  Cargo.toml  README.md  default.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
nix/: sources.json
src/: config.rs  main.rs
src/cmds/: build.rs  hook.rs
src/cmds/hook/: inactive.sh  stale.sh
