[package]
name = "firstaide"
version = "0.1.6"
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
edition = "2018"
description = "Bootstrap and cache Nix environments; works with direnv."
readme = "README.md"
repository = "https://github.com/allenap/firstaide"
license = "Apache-2.0"
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "allenap/firstaide", branch = "master" }

[dependencies]
anyhow = "1.0.65"
atty = "0.2.14"
bincode = "1.3.3"
bstr = "0.2.17"
chrono = "0.4.22"
clap = { version = "3.2.21", features = [ "std", "color", "suggestions", "derive", "cargo" ] }
crypto-hash = "0.3.4"
dirs = "4.0.0"
fern = "0.6.1"
log = "0.4.17"
path-absolutize = "3.0.13"
semver = "1.0.13"
serde = { version = "1.0.143", features = ["derive"] }
shell-quote = "0.3.0"
spinners = "4.1.0"
tempfile = "3.3.0"
toml = "0.5.9"
